Fixed the p shift

--- a/styles.css
+++ b/styles.css
@@ -242,16 +242,19 @@ img
         font-size: 500%;
         padding-top: 50px;
         margin-top: 100px;
+        margin-left: 10%;
     }
     h2
     {
         font-size: 300%;
+        margin-left: 10%;
     }
     p 
     {
         font-size: 200%;
         padding: 3%;
         margin-bottom: 5px;
+        margin-left: 10%;
     }
     img
     {
